--- a/public/draft.html
+++ b/public/draft.html
@@ -27,7 +27,7 @@
 		  <div class="col-sm-6 col-md-4">
 		    <div class="thumbnail">
 		      <h3>Build your Profile</h3>
-		      <img src="..." alt="...">
+		      <img src="./assets/images/community.jpg" alt="...">
 		      <div class="caption">
 		        <p>Personalize your Profile and chat with the Community</p>
 		        <p><a href="#" class="btn btn-primary" role="button">Button</a></p>
@@ -37,7 +37,7 @@
 		  <div class="col-sm-6 col-md-4">
 		    <div class="thumbnail">
 		      <h3>Get Fit</h3>
-		      <img src="..." alt="...">
+		      <img src="..." alt="man doing dips">
 		      <div class="caption">
 		        <p>Customize your workouts and share with the community!</p>
 		        <p><a href="#" class="btn btn-primary" role="button">Button</a></p>
